i did so many things and don't remember all

--- a/themes/backendbrasil/languages/pt.json
+++ b/themes/backendbrasil/languages/pt.json
@@ -1,8 +1,16 @@
 {
+  "events": {
+    "title": "Eventos",
+    "begginners": "Iniciantes"
+  },
   "menu": {
     "about": "Quem Somos",
     "jobs": "Vagas",
     "blog": "Blog",
     "join": "Participe"
+  },
+  "show": {
+    "more": "Mostrar mais",
+    "less": "Mostrar menos"
   }
 }
