add sponsors and partners data file, change tile-is-flexible and loop for partners and sponsors tags

--- a/themes/backendbrasil/languages/pt.json
+++ b/themes/backendbrasil/languages/pt.json
@@ -14,5 +14,7 @@
     "more": "Mostrar mais",
     "less": "Mostrar menos"
   },
-  "follow_blog": "Acompanhe nosso blog"
+  "follow_blog": "Acompanhe nosso blog",
+  "partners": "Parceiros",
+  "sponsors": "Patrocinadores"
 }
