--- a/themes/backendbrasil/languages/pt.json
+++ b/themes/backendbrasil/languages/pt.json
@@ -24,6 +24,7 @@
     "join": "Participe"
   },
   "show": {
+    "all": "Ver todos",
     "more": "Mostrar mais",
     "less": "Mostrar menos"
   },
