working on newsletter

--- a/themes/backendbrasil/languages/pt.json
+++ b/themes/backendbrasil/languages/pt.json
@@ -34,7 +34,7 @@
   },
   "newsletter": {
     "title": "Assine nossa newsletter",
-    "subtitle": "E saiba as últimas da comunidade!"
+    "subtitle": "Fique por dentro de tudo o que acontece na comunidade!"
   },
   "follow_blog": "Acompanhe nosso blog",
   "partners": "Parceiros",
