--- a/themes/backendbrasil/languages/pt.json
+++ b/themes/backendbrasil/languages/pt.json
@@ -6,7 +6,8 @@
     "blog": "Blog"
   },
   "blog": {
-    "latest": "Últimas do blog"
+    "latest": "Últimas do blog",
+    "no_posts": "Ainda não temos nenhuma publicação"
   },
   "home": {
     "header": {
