--- a/themes/backendbrasil/languages/pt.json
+++ b/themes/backendbrasil/languages/pt.json
@@ -14,6 +14,15 @@
       "title": "Olá mundo! Somos ",
       "subtitle": "a maior comunidade de back-end no Brasil.",
       "description": "Temos como objetivo unir pessoas desenvolvedoras back-end em qualquer nível de conhecimento para discutir, trazer suas dúvidas e trocar experiências entre si."
+    },
+    "follow_blog": "Acompanhe nosso blog",
+    "partners": "Parceiros",
+    "sponsors": "Patrocinadores"
+  },
+  "about": {
+    "header": {
+      "title": "Bem-vindo(a) à maior comunidade<br><strong>de back-end do Brasil ;)</strong>",
+      "text": "Nossa comunidade Back-End BR tem como objetivo unir desenvolvedore(a)s Back-End, que tenham qualquer conhecimento, para discutir, trazer suas dúvidas e trocar conhecimento entre si."
     }
   },
   "sign": "Assinar",
@@ -42,8 +51,5 @@
   "newsletter": {
     "title": "Assine nossa newsletter",
     "subtitle": "Fique por dentro de tudo o que acontece na comunidade!"
-  },
-  "follow_blog": "Acompanhe nosso blog",
-  "partners": "Parceiros",
-  "sponsors": "Patrocinadores"
+  }
 }
