Adicionando imagens e fontes

--- a/themes/backendbrasil/languages/pt.json
+++ b/themes/backendbrasil/languages/pt.json
@@ -24,6 +24,9 @@
       "title": "Bem-vindo(a) à maior comunidade<br><strong>de back-end do Brasil ;)</strong>",
       "text": "Nossa comunidade Back-End BR tem como objetivo unir desenvolvedore(a)s Back-End, que tenham qualquer conhecimento, para discutir, trazer suas dúvidas e trocar conhecimento entre si."
     },
+    "we_team": {
+      "title": "Nosso time"
+    },
     "we_believe": {
       "title": "Acreditamos em",
       "respect": {
