--- a/themes/backendbrasil/languages/pt.json
+++ b/themes/backendbrasil/languages/pt.json
@@ -47,7 +47,7 @@
         "text": "Para obter e gerar conhecimento, a tecnologia só chegou até onde está hoje pois o conhecimento foi repassado."
       }
     },
-    "things_we_do": "Acima de tudo, é fundamental ressaltar que o início da atividade geral de formação de atitudes talvez venha a ressaltar a relatividade do investimento em reciclagem técnica."
+    "things_we_do": "Mensalmente fazemos um Meetup que reúne grandes nomes do universo de desenvolvimento para palestras, networking para todos, apoiando como podemos para conseguir o primeiro emprego ou a mudança com o repositório (me-contrate), cedendo espaço para empresas anunciar vagas aos membros da comunidade (vagas) e tirando dúvidas através do repositório (fórum) ou através do Slack. "
   },
   "sign": "Assinar",
   "email_placeholder": "Digite seu e-mail",
