add loadMoreJobs js code

--- a/themes/backendbrasil/languages/pt.json
+++ b/themes/backendbrasil/languages/pt.json
@@ -59,7 +59,11 @@
       "search": "Pesquise por palavra-chave"
     },
     "opened_jobs": "Vagas abertas",
-    "partners": "Outros repositórios de vagas"
+    "partners": "Outros repositórios de vagas",
+    "load": {
+      "more": "Carregar mais",
+      "empty": "Não tem mais vagas!"
+    }
   },
   "sign": "Assinar",
   "email_placeholder": "Digite seu e-mail",
